# src/seguridad.js
@@ -16,10 +16,14 @@ async function encriptaPassword(password) {
     return bcrypt.hash(password, salt)
 }
 
+const generarRealm = () => {
+    return `${config.security.AUTHENTICATION_SCHEME}realm="MicroserviciosJWT"`
+}
+
 const RefreshTokenHMAC256 = {
     generar: (usuario) => {
         return jwt.sign({
-            usr: usuario[config.security.PROP_USERNAME],
+            sub: usuario[config.security.PROP_USERNAME],
         }, config.security.REFRESH_KEY, { issuer: 'MicroserviciosJWT', audience: 'authorization', expiresIn: config.security.EXPIRACION_MIN * config.security.REFRESH_FACTOR + 'm', notBefore: config.security.EXPIRACION_MIN + 'm' })
     },
     decode: (token) => {
@@ -32,8 +36,7 @@ const TokenRS256 = {
         let buff = Buffer.from(config.security.PRIVATE_KEY, 'base64');
 
         return jwt.sign({
-            usr: usuario[config.security.PROP_USERNAME],
-            name: usuario.nombre,
+            sub: usuario[config.security.PROP_USERNAME],
             roles: usuario.roles
         }, createPrivateKey({ key: buff, format: 'der', type: 'pkcs8' }), { issuer: 'MicroserviciosJWT', audience: 'authorization', algorithm: 'RS256', expiresIn: config.security.EXPIRACION_MIN + 'm' })
     },
@@ -45,19 +48,20 @@ const TokenRS256 = {
 const CreatedTokenHMAC256 = {
     generar: (usuario) => {
         return jwt.sign({
-            usr: usuario[config.security.PROP_USERNAME],
+            sub: usuario[config.security.PROP_USERNAME],
         }, config.security.REFRESH_KEY, { expiresIn: '24h' })
     },
     decode: (token) => {
         return jwt.verify(token, config.security.REFRESH_KEY);
     }
 }
+
 module.exports.CreatedTokenHMAC256 = CreatedTokenHMAC256;
 
 module.exports.generarTokenJWT = TokenRS256.generar
 
 module.exports.generarTokenScheme = (usuario) => {
-    return config.security.AUTHENTICATION_SCHEME + module.exports.generarTokenJWT(usuario)
+    return `${config.security.AUTHENTICATION_SCHEME}${module.exports.generarTokenJWT(usuario)}`
 }
 
 // Middleware: Cross-origin resource sharing (CORS)
@@ -89,16 +93,16 @@ module.exports.useAuthentication = (req, res, next) => {
     try {
         let decoded = TokenRS256.decode(token);
         res.locals.isAuthenticated = true;
-        res.locals.usr = decoded.usr;
-        res.locals.name = decoded.name;
+        res.locals.usr = decoded.sub;
         res.locals.roles = decoded.roles;
         res.locals.isInRole = role => res.locals.roles.includes(role)
         next();
     } catch (err) {
         if (err.name === 'TokenExpiredError') {
-            res.set('WWW-Authenticate', 'Bearer realm="MicroserviciosJWT", error="invalid_token", error_description="The access token expired"')
-            return next(generateError(req, `Invalid token: token expired`, 403, [{ expiredAt: err.expiredAt }]))
+            res.set('WWW-Authenticate', `${generarRealm()}, error="invalid_token", error_description="The access token expired"`)
+            return next(generateError(req, `Invalid token: token expired`, 401, [{ expiredAt: err.expiredAt }]))
         }
+        res.set('WWW-Authenticate', `${generarRealm()}, error="invalid_token", error_description="The access is invalid"`)
         return next(generateError(req, 'Invalid token', 401))
     }
 }
@@ -108,6 +112,7 @@ module.exports.onlyAuthenticated = (req, res, next) => {
         return next()
     }
     if (!res.locals.isAuthenticated) {
+        res.set('WWW-Authenticate', generarRealm())
         return next(generateErrorByStatus(req, 401))
     }
     next()
@@ -117,12 +122,14 @@ module.exports.onlyInRole = (roles) => (req, res, next) => {
         return next()
     }
     if (!res.locals.isAuthenticated) {
+        res.set('WWW-Authenticate', generarRealm())
         return next(generateErrorByStatus(req, 401))
     }
 
     if (roles.split(',').some(role => res.locals.isInRole(role))) {
         next()
     } else {
+        res.set('WWW-Authenticate', generarRealm() + ', error="insufficient_scope", error_description="Requires higher privileges"')
         return next(generateErrorByStatus(req, 403))
     }
 }
@@ -132,6 +139,7 @@ module.exports.onlySelf = (_req, res, next) => {
 }
 module.exports.readOnly = (req, res, next) => {
     if (req.method !== 'GET' && req.method !== 'OPTIONS' && !res.locals.isAuthenticated) {
+        res.set('WWW-Authenticate', generarRealm())
         return next(generateErrorByStatus(req, 401))
     }
     next()
@@ -165,6 +173,7 @@ module.exports.useXSRF = (req, res, next) => {
     if ('POST|PUT|DELETE|PATCH'.includes(req.method.toUpperCase()) && isInvalidXsrfToken(req)) {
         if (req.cookies['XSRF-TOKEN'] !== module.exports.generateXsrfToken(req))
             generateXsrfCookie(req, res)
+        res.set('WWW-Authenticate', generarRealm())
         return next(generateError(req, 'Invalid XSRF-TOKEN', 401))
     }
     res.XsrfToken = module.exports.generateXsrfToken(req)
@@ -174,13 +183,13 @@ module.exports.useXSRF = (req, res, next) => {
 async function getUserElementAndList(username) {
     const data = await fs.readFile(config.security.USR_FILENAME, 'utf8')
     const list = JSON.parse(data)
-    const element = list.find(item => item[config.security.PROP_USERNAME] == username)  
+    const element = list.find(item => item[config.security.PROP_USERNAME] == username)
     return { element, list }
 }
 async function getUserIndexAndList(username) {
     const data = await fs.readFile(config.security.USR_FILENAME, 'utf8')
     const list = JSON.parse(data)
-    const index = list.findIndex(item => item[config.security.PROP_USERNAME] == username)  
+    const index = list.findIndex(item => item[config.security.PROP_USERNAME] == username)
     return { index, list }
 }
 
@@ -211,16 +220,18 @@ async function getUserIndexAndList(username) {
  *         password:
  *           type: string
  *           format: password
- *           example: 'P@$$w0rd'
+ *           example: 'P@$$$w0rd'
  *     RespuestaLogin:
  *       type: object
  *       title: Respuesta Login
  *       properties:
  *         success:
  *           type: boolean
- *         token:
+ *         access_token:
  *           type: string
- *         refresh:
+ *         token_type:
+ *           type: string
+ *         refresh_token:
  *           type: string
  *         name:
  *           type: string
@@ -302,7 +313,7 @@ router.post('/login', function (req, res, next) {
     }
     (async () => {
         try {
-            const {element} = await getUserElementAndList(usr)
+            const { element } = await getUserElementAndList(usr)
             if (element && element.activo && (await bcrypt.compare(pwd, element[config.security.PROP_PASSWORD]))) {
                 sendLogin(req, res, element)
             } else {
@@ -357,7 +368,7 @@ router.post('/login/refresh', function (req, res, next) {
     (async () => {
         try {
             let decoded = RefreshTokenHMAC256.decode(req.body.token);
-            const {element} = await getUserElementAndList(decoded.usr)
+            const { element } = await getUserElementAndList(decoded.sub)
             if (element && element.activo) {
                 sendLogin(req, res, element)
             } else {
@@ -367,13 +378,15 @@ router.post('/login/refresh', function (req, res, next) {
             let rslt;
             switch (err.name) {
                 case 'TokenExpiredError':
-                    res.set('WWW-Authenticate', 'Bearer realm="MicroserviciosJWT", error="invalid_token", error_description="The access token expired"')
-                    rslt = generateError(req, `Invalid token: token expired`, 403, [{ expiredAt: err.expiredAt }])
+                    res.set('WWW-Authenticate', `${generarRealm()}, error="invalid_token", error_description="The access token expired"`)
+                    rslt = generateError(req, `Invalid token: token expired`, 401, [{ expiredAt: err.expiredAt }])
                     break;
                 case 'NotBeforeError':
+                    res.set('WWW-Authenticate', `${generarRealm()}, error="insufficient_scope", error_description="The refresh token not active"`)
                     rslt = generateError(req, `Invalid token: token not active`, 403, [{ notBefore: err.date }])
                     break;
                 default:
+                    res.set('WWW-Authenticate', `${generarRealm()}, error="insufficient_scope", error_description="Requires higher privileges"`)
                     rslt = generateError(req, 'Invalid token', 403)
                     break;
 
@@ -398,15 +411,21 @@ router.post('/login/refresh', function (req, res, next) {
  *               type: string
  */
 router.get('/login/signature', function (_req, res) {
-    res.contentType('text/plain').send(config.security.PUBLIC_KEY)
+    const BLOCK_LENGTH = 64
+    let pem = '-----BEGIN PUBLIC KEY-----\n'
+    for (let i = 0; i < config.security.PUBLIC_KEY.length; i += BLOCK_LENGTH)
+        pem += config.security.PUBLIC_KEY.substring(i, Math.min(i + BLOCK_LENGTH, config.security.PUBLIC_KEY.length)) + '\n'
+    pem += '-----END PUBLIC KEY-----\n'
+    res.contentType('application/pem-certificate-chain').send(pem)
 })
 
 function sendLogin(req, res, element) {
     let token = module.exports.generarTokenScheme(element)
     let payload = {
         success: true,
-        token: module.exports.generarTokenScheme(element),
-        refresh: RefreshTokenHMAC256.generar(element),
+        token_type: config.security.AUTHENTICATION_SCHEME.trim(),
+        access_token: module.exports.generarTokenJWT(element),
+        refresh_token: RefreshTokenHMAC256.generar(element),
         name: element.nombre || element[config.security.PROP_NAME],
         roles: element.roles,
         expires_in: config.security.EXPIRACION_MIN * 60
@@ -564,13 +583,13 @@ router.get('/register/status', function (req, res, next) {
     }
     let usr;
     try {
-        usr = CreatedTokenHMAC256.decode(req.query.instance).usr
+        usr = CreatedTokenHMAC256.decode(req.query.instance).sub
     } catch {
         res.status(200).json({ status: 'canceled', result: 'timeout' }).end()
         return
     }
     (async () => {
-        const {element} = await getUserElementAndList(usr)
+        const { element } = await getUserElementAndList(usr)
         if (!element) {
             res.status(200).json({ status: 'complete', result: 'reject' }).end()
         } else if (typeof (element.activo) === 'undefined') {
@@ -604,12 +623,12 @@ router.get('/register/confirm', function (req, res, next) {
     }
     let usr;
     try {
-        usr = CreatedTokenHMAC256.decode(req.query.instance).usr
+        usr = CreatedTokenHMAC256.decode(req.query.instance).sub
     } catch {
         return next(generateError(req, 'Ya no existe la instancia.', 400))
     }
     (async () => {
-        const {element, list} = await getUserElementAndList(usr)
+        const { element, list } = await getUserElementAndList(usr)
         if (!element) {
             return next(generateErrorByStatus(req, 404))
         }
@@ -646,12 +665,12 @@ router.get('/register/reject', function (req, res, next) {
     }
     let usr;
     try {
-        usr = CreatedTokenHMAC256.decode(req.query.instance).usr
+        usr = CreatedTokenHMAC256.decode(req.query.instance).sub
     } catch {
         return next(generateError(req, 'Ya no existe la instancia.', 400))
     }
     (async () => {
-        const {index, list} = await getUserIndexAndList(usr)
+        const { index, list } = await getUserIndexAndList(usr)
         if (index == -1) {
             return next(generateErrorByStatus(req, 404))
         }
@@ -697,7 +716,7 @@ autenticados.use(module.exports.useAuthentication)
  *                    type: string
  */
 autenticados.get('/', function (_req, res) {
-    res.status(200).json({ isAuthenticated: res.locals.isAuthenticated, usr: res.locals.usr, name: res.locals.name, roles: res.locals.roles })
+    res.status(200).json({ isAuthenticated: res.locals.isAuthenticated, subject: res.locals.usr, roles: res.locals.roles })
 })
 router.use('/auth', autenticados)
 
@@ -739,11 +758,12 @@ autenticados.use(module.exports.onlySelf)
 autenticados.get('/', function (req, res, next) {
     let usr = res.locals.usr;
     (async () => {
-        const {element} = await getUserElementAndList(usr)
+        const { element } = await getUserElementAndList(usr)
         if (element) {
             delete element[config.security.PROP_PASSWORD]
             res.status(200).json(element)
         } else {
+            res.set('WWW-Authenticate', generarRealm())
             return next(generateErrorByStatus(req, 401))
         }
     })()
@@ -780,11 +800,13 @@ autenticados.get('/', function (req, res, next) {
  *         $ref: "#/components/responses/NotFound"
  */
 autenticados.put('/', function (req, res, next) {
-    if (!isSelf(res, req.body.idUsuario))
+    if (!isSelf(res, req.body.idUsuario)) {
+        res.set('WWW-Authenticate', `${generarRealm()}, error="insufficient_scope", error_description="Requires higher privileges"`)
         return next(generateErrorByStatus(req, 403))
+    }
     let element = req.body;
     (async () => {
-        const {index, list} = await getUserIndexAndList(res.locals.usr)
+        const { index, list } = await getUserIndexAndList(res.locals.usr)
         if (index == -1) {
             return next(generateErrorByStatus(req, 404))
         } else {
@@ -835,7 +857,7 @@ autenticados.put('/', function (req, res, next) {
 autenticados.put('/password', function (req, res, next) {
     let element = req.body;
     (async () => {
-        const {index, list} = await getUserIndexAndList(res.locals.usr)
+        const { index, list } = await getUserIndexAndList(res.locals.usr)
         if (index == -1) {
             return next(generateErrorByStatus(req, 404))
         } else if (config.security.PASSWORD_PATTERN.test(element.newPassword) && (await bcrypt.compare(element.oldPassword, list[index][config.security.PROP_PASSWORD]))) {
